--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,10 @@
 {
   "require": {
-    "php": ">=7.1",
+    "php": ">=7.2",
     "ext-gd": "*",
-    "johnpbloch/wordpress": "5.0.x-dev"
+    "johnpbloch/wordpress": ">=5.0"
   },
   "extra": {
     "wordpress-install-dir": "wordpress"
-  },
-  "minimum-stability": "dev"
+  }
 }
