--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,18 @@ services:
     depends_on:
       - db
     ports:
-      - 8080:80
+      - 80
     volumes:
       - .:/var/www/localhost/htdocs
     working_dir: /var/www/localhost/htdocs
     environment:
-      - DATABASE_URL=mysql://root:123@db/default
+      - DATABASE_URL=mysql://root:123@db/wordpress
       - WP_DEBUG=true
   db:
     image: mariadb:10.3
     restart: always
+    ports:
+      - 3306
     environment:
-      - MYSQL_DATABASE=default
+      - MYSQL_DATABASE=wordpress
       - MYSQL_ROOT_PASSWORD=123
