--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,10 @@ wp-content/backups/
 wp-content/blogs.dir/
 wp-content/cache/
 wp-content/upgrade/
-wp-content/uploads/
-wp-content/plugins/
+wp-content/uploads/*
+!wp-content/uploads/.gitkeep
+wp-content/plugins/*
+!wp-content/plugins/.gitkeep
 wp-content/wp-cache-config.php
 wp-content/plugins/hello.php
 wordpress/
