--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,14 @@
 RewriteEngine on
+
+RewriteCond %{ENV:UPLOADS_URL} .+
+RewriteCond %{REQUEST_URI} ^/wp-content/uploads/.+$
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule ^(.*)$ %{ENV:UPLOADS_URL}/$1 [END]
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ wordpress/$1
+
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule .* /wordpress/index.php
+RewriteRule .* /index.php [END]
