--- a/.gitignore
+++ b/.gitignore
@@ -5,19 +5,6 @@ Thumbs.db
 .Spotlight-V100
 .Trashes
 *.log
-wp-content/advanced-cache.php
-wp-content/backup-db/
-wp-content/backups/
-wp-content/blogs.dir/
-wp-content/cache/
-wp-content/upgrade/
-wp-content/uploads/*
-!wp-content/uploads/.gitkeep
-wp-content/plugins/*
-!wp-content/plugins/.gitkeep
-wp-content/wp-cache-config.php
-wp-content/plugins/hello.php
-wordpress/
+sitemap.xml*
+public/
 vendor/
-/sitemap.xml
-/sitemap.xml.gz
