--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,4 @@
-RewriteEngine on
+RewriteEngine On
 
-RewriteCond %{REQUEST_URI} !public/
+RewriteCond %{REQUEST_URI} !^public/
 RewriteRule (.*) public/$1 [L]
-
-RewriteCond %{REQUEST_URI} ^public/wp-content/uploads/
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule public/(.*) %{ENV:REMOTE_URL}/$1 [END]
-
-
