--- a/packages/my-plugin/composer.json
+++ b/packages/my-plugin/composer.json
@@ -2,5 +2,7 @@
   "name": "local/my-plugin",
   "version": "1.0.0",
   "type": "wordpress-plugin",
-  "require": {}
+  "require": {
+    "composer/installers": "~1.0"
+  }
 }
