--- a/packages/my-theme/composer.json
+++ b/packages/my-theme/composer.json
@@ -3,6 +3,7 @@
   "version": "1.0.1",
   "type": "wordpress-theme",
   "require": {
+    "composer/installers": "~1.0",
     "local/my-plugin": "*"
   }
 }
