--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,40 @@
   ],
   "require": {
     "php": "^7.3",
-    "ext-exif": "*",
-    "ext-gd": "*",
-    "ext-pdo": "*",
     "ext-bcmath": "*",
+    "ext-curl": "*",
+    "ext-date": "*",
+    "ext-dom": "*",
+    "ext-exif": "*",
+    "ext-filter": "*",
+    "ext-ftp": "*",
+    "ext-gd": "*",
+    "ext-hash": "*",
+    "ext-iconv": "*",
+    "ext-json": "*",
+    "ext-libxml": "*",
     "ext-mbstring": "*",
-    "roots/wordpress": "^5.4",
+    "ext-mysqli": "*",
+    "ext-openssl": "*",
+    "ext-pcre": "*",
+    "ext-pdo": "*",
+    "ext-posix": "*",
+    "ext-simplexml": "*",
+    "ext-sockets": "*",
+    "ext-spl": "*",
+    "ext-tokenizer": "*",
+    "ext-xml": "*",
+    "ext-xmlreader": "*",
+    "ext-zlib": "*",
+    "composer/installers": "^1.0",
     "koodimonni-language/pt_br": "*",
-    "local/my-theme": "*"
+    "roots/wordpress": "^5.4",
+    "roots/wp-password-bcrypt": "^1.0",
+    "roots/soil": "^3.9",
+    "local/my-theme": "*",
+    "local/my-plugin": "*",
+    "humanmade/s3-uploads": "^2.2",
+    "wpackagist-plugin/html-forms": "^1.3"
   },
   "extra": {
     "wordpress-install-dir": "public/wp-core",
