--- a/packages/my-plugin/composer.json
+++ b/packages/my-plugin/composer.json
@@ -2,7 +2,5 @@
   "name": "local/my-plugin",
   "version": "1.0.0",
   "type": "wordpress-plugin",
-  "require": {
-    "composer/installers": "~1.0"
-  }
+  "require": {}
 }
