--- a/packages/my-theme/composer.json
+++ b/packages/my-theme/composer.json
@@ -1,9 +1,6 @@
 {
   "name": "local/my-theme",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "type": "wordpress-theme",
-  "require": {
-    "composer/installers": "~1.0",
-    "local/my-plugin": "*"
-  }
+  "require": {}
 }
