--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,9 @@
     "local/my-theme": "*",
     "local/my-plugin": "*",
     "humanmade/s3-uploads": "^2.2",
-    "wpackagist-plugin/html-forms": "^1.3"
+    "wpackagist-plugin/html-forms": "^1.3",
+    "wpackagist-plugin/wordpress-importer": "^0.7.0",
+    "wpackagist-plugin/advanced-custom-fields": "^5.8"
   },
   "extra": {
     "wordpress-install-dir": "public/wp-core",
